--- a/English.lproj/ExportPatchesSheet.xib
+++ b/English.lproj/ExportPatchesSheet.xib
@@ -698,33 +698,6 @@
 								<reference key="NSTextColor" ref="1032412444"/>
 							</object>
 						</object>
-						<object class="NSButton" id="567521811">
-							<reference key="NSNextResponder" ref="803546326"/>
-							<int key="NSvFlags">289</int>
-							<string key="NSFrame">{{315, 200}, {107, 18}}</string>
-							<reference key="NSSuperview" ref="803546326"/>
-							<bool key="NSEnabled">YES</bool>
-							<object class="NSButtonCell" key="NSCell" id="981541673">
-								<int key="NSCellFlags">67239424</int>
-								<int key="NSCellFlags2">0</int>
-								<string key="NSContents">Switch Parent</string>
-								<reference key="NSSupport" ref="912308949"/>
-								<reference key="NSControlView" ref="567521811"/>
-								<int key="NSButtonFlags">1211912703</int>
-								<int key="NSButtonFlags2">2</int>
-								<object class="NSCustomResource" key="NSNormalImage" id="430788356">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">NSSwitch</string>
-								</object>
-								<object class="NSButtonImageSource" key="NSAlternateImage" id="744041006">
-									<string key="NSImageName">NSSwitch</string>
-								</object>
-								<string key="NSAlternateContents"/>
-								<string key="NSKeyEquivalent"/>
-								<int key="NSPeriodicDelay">200</int>
-								<int key="NSPeriodicInterval">25</int>
-							</object>
-						</object>
 						<object class="NSButton" id="346692143">
 							<reference key="NSNextResponder" ref="803546326"/>
 							<int key="NSvFlags">289</int>
@@ -739,8 +712,13 @@
 								<reference key="NSControlView" ref="346692143"/>
 								<int key="NSButtonFlags">1211912703</int>
 								<int key="NSButtonFlags2">2</int>
-								<reference key="NSNormalImage" ref="430788356"/>
-								<reference key="NSAlternateImage" ref="744041006"/>
+								<object class="NSCustomResource" key="NSNormalImage" id="587580651">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">NSSwitch</string>
+								</object>
+								<object class="NSButtonImageSource" key="NSAlternateImage" id="744041006">
+									<string key="NSImageName">NSSwitch</string>
+								</object>
 								<string key="NSAlternateContents"/>
 								<string key="NSKeyEquivalent"/>
 								<int key="NSPeriodicDelay">200</int>
@@ -889,14 +867,14 @@
 							<reference key="NSSuperview" ref="803546326"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="332394310">
-								<int key="NSCellFlags">67239424</int>
+								<int key="NSCellFlags">-2080244224</int>
 								<int key="NSCellFlags2">0</int>
 								<string key="NSContents">“Git” style diffs</string>
 								<reference key="NSSupport" ref="912308949"/>
 								<reference key="NSControlView" ref="376526184"/>
 								<int key="NSButtonFlags">1211912703</int>
 								<int key="NSButtonFlags2">2</int>
-								<reference key="NSNormalImage" ref="430788356"/>
+								<reference key="NSNormalImage" ref="587580651"/>
 								<reference key="NSAlternateImage" ref="744041006"/>
 								<string key="NSAlternateContents"/>
 								<string key="NSKeyEquivalent"/>
@@ -918,7 +896,7 @@
 								<reference key="NSControlView" ref="52974577"/>
 								<int key="NSButtonFlags">1211912703</int>
 								<int key="NSButtonFlags2">2</int>
-								<reference key="NSNormalImage" ref="430788356"/>
+								<reference key="NSNormalImage" ref="587580651"/>
 								<reference key="NSAlternateImage" ref="744041006"/>
 								<string key="NSAlternateContents"/>
 								<string key="NSKeyEquivalent"/>
@@ -1068,7 +1046,7 @@ dmlzaW9uIG51bWJlcgolaCAgIHNob3J0LWZvcm0gY2hhbmdlc2V0IGhhc2g</string>
 						<object class="NSButton" id="480348684">
 							<reference key="NSNextResponder" ref="803546326"/>
 							<int key="NSvFlags">289</int>
-							<string key="NSFrame">{{175, 200}, {109, 18}}</string>
+							<string key="NSFrame">{{313, 200}, {109, 18}}</string>
 							<reference key="NSSuperview" ref="803546326"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="623802683">
@@ -1079,7 +1057,7 @@ dmlzaW9uIG51bWJlcgolaCAgIHNob3J0LWZvcm0gY2hhbmdlc2V0IGhhc2g</string>
 								<reference key="NSControlView" ref="480348684"/>
 								<int key="NSButtonFlags">1211912703</int>
 								<int key="NSButtonFlags2">2</int>
-								<reference key="NSNormalImage" ref="430788356"/>
+								<reference key="NSNormalImage" ref="587580651"/>
 								<reference key="NSAlternateImage" ref="744041006"/>
 								<string key="NSAlternateContents"/>
 								<string key="NSKeyEquivalent"/>
@@ -1170,22 +1148,6 @@ dmlzaW9uIG51bWJlcgolaCAgIHNob3J0LWZvcm0gY2hhbmdlc2V0IGhhc2g</string>
 						</object>
 					</object>
 					<int key="connectionID">151</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBBindingConnection" key="connection">
-						<string key="label">value: switchParentOption</string>
-						<reference key="source" ref="567521811"/>
-						<reference key="destination" ref="1001"/>
-						<object class="NSNibBindingConnector" key="connector">
-							<reference key="NSSource" ref="567521811"/>
-							<reference key="NSDestination" ref="1001"/>
-							<string key="NSLabel">value: switchParentOption</string>
-							<string key="NSBinding">value</string>
-							<string key="NSKeyPath">switchParentOption</string>
-							<int key="NSNibBindingConnectorVersion">2</int>
-						</object>
-					</object>
-					<int key="connectionID">152</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
@@ -1297,19 +1259,19 @@ dmlzaW9uIG51bWJlcgolaCAgIHNob3J0LWZvcm0gY2hhbmdlc2V0IGhhc2g</string>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
-						<string key="label">value: switchParentOption</string>
+						<string key="label">value: reversePatchOption</string>
 						<reference key="source" ref="480348684"/>
 						<reference key="destination" ref="1001"/>
 						<object class="NSNibBindingConnector" key="connector">
 							<reference key="NSSource" ref="480348684"/>
 							<reference key="NSDestination" ref="1001"/>
-							<string key="NSLabel">value: switchParentOption</string>
+							<string key="NSLabel">value: reversePatchOption</string>
 							<string key="NSBinding">value</string>
-							<string key="NSKeyPath">switchParentOption</string>
+							<string key="NSKeyPath">reversePatchOption</string>
 							<int key="NSNibBindingConnectorVersion">2</int>
 						</object>
 					</object>
-					<int key="connectionID">174</int>
+					<int key="connectionID">175</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -1370,7 +1332,6 @@ dmlzaW9uIG51bWJlcgolaCAgIHNob3J0LWZvcm0gY2hhbmdlc2V0IGhhc2g</string>
 							<reference ref="707143374"/>
 							<reference ref="472831532"/>
 							<reference ref="596372150"/>
-							<reference ref="567521811"/>
 							<reference ref="346692143"/>
 							<reference ref="376526184"/>
 							<reference ref="52974577"/>
@@ -1391,20 +1352,6 @@ dmlzaW9uIG51bWJlcgolaCAgIHNob3J0LWZvcm0gY2hhbmdlc2V0IGhhc2g</string>
 						<int key="objectID">141</int>
 						<reference key="object" ref="826058970"/>
 						<reference key="parent" ref="707143374"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">97</int>
-						<reference key="object" ref="567521811"/>
-						<object class="NSMutableArray" key="children">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="981541673"/>
-						</object>
-						<reference key="parent" ref="803546326"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">98</int>
-						<reference key="object" ref="981541673"/>
-						<reference key="parent" ref="567521811"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">131</int>
@@ -1939,9 +1886,6 @@ dmlzaW9uIG51bWJlcgolaCAgIHNob3J0LWZvcm0gY2hhbmdlc2V0IGhhc2g</string>
 					<string>80.IBPluginDependency</string>
 					<string>81.IBPluginDependency</string>
 					<string>82.IBPluginDependency</string>
-					<string>97.IBAttributePlaceholdersKey</string>
-					<string>97.IBPluginDependency</string>
-					<string>98.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -2067,16 +2011,6 @@ dmlzaW9uIG51bWJlcgolaCAgIHNob3J0LWZvcm0gY2hhbmdlc2V0IGhhc2g</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<object class="NSMutableDictionary">
-						<string key="NS.key.0">ToolTip</string>
-						<object class="IBToolTipAttribute" key="NS.object.0">
-							<string key="name">ToolTip</string>
-							<reference key="object" ref="567521811"/>
-							<string key="toolTip">overwrite locally modified files (no backup) (--clean option)</string>
-						</object>
-					</object>
-					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="unlocalizedProperties">
@@ -2095,7 +2029,7 @@ dmlzaW9uIG51bWJlcgolaCAgIHNob3J0LWZvcm0gY2hhbmdlc2V0IGhhc2g</string>
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">174</int>
+			<int key="maxID">175</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
