--- a/English.lproj/DifferencesView.xib
+++ b/English.lproj/DifferencesView.xib
@@ -24,8 +24,8 @@
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 			<string>com.brandonwalkin.BWToolkit</string>
+			<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 		</object>
 		<object class="NSMutableDictionary" key="IBDocument.Metadata">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -164,7 +164,7 @@
 																				<string key="NSColorName">controlColor</string>
 																				<object class="NSColor" key="NSColor" id="378433714">
 																					<int key="NSColorSpace">3</int>
-																					<bytes key="NSWhite">MC42NjY2NjY2NjY3AA</bytes>
+																					<bytes key="NSWhite">MC42NjY2NjY2ODY1AA</bytes>
 																				</object>
 																			</object>
 																			<object class="NSColor" key="NSTextColor" id="291829360">
@@ -2340,6 +2340,46 @@
 					</object>
 					<int key="connectionID">599</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">differencesMenuDiffSelectedFiles:</string>
+						<reference key="source" ref="1003"/>
+						<reference key="destination" ref="303258090"/>
+					</object>
+					<int key="connectionID">600</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">mainMenuDiffAllFiles:</string>
+						<reference key="source" ref="1003"/>
+						<reference key="destination" ref="922347648"/>
+					</object>
+					<int key="connectionID">601</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">differencesMenuRevealSelectedFilesInFinder:</string>
+						<reference key="source" ref="1003"/>
+						<reference key="destination" ref="357980237"/>
+					</object>
+					<int key="connectionID">603</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">differencesMenuOpenTerminalHere:</string>
+						<reference key="source" ref="1003"/>
+						<reference key="destination" ref="881264107"/>
+					</object>
+					<int key="connectionID">604</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">differencesMenuOpenSelectedFilesInFinder:</string>
+						<reference key="source" ref="1003"/>
+						<reference key="destination" ref="192635466"/>
+					</object>
+					<int key="connectionID">605</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -3549,11 +3589,96 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">599</int>
+			<int key="maxID">605</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<bool key="EncodedWithXMLCoder">YES</bool>
+				<object class="IBPartialClassDescription">
+					<string key="className">BrowserView</string>
+					<string key="superclassName">NSView</string>
+					<object class="NSMutableDictionary" key="actions">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>mainMenuAddRenameRemoveAllFiles:</string>
+							<string>mainMenuAddRenameRemoveSelectedFiles:</string>
+							<string>mainMenuAddSelectedFiles:</string>
+							<string>mainMenuAnnotateSelectedFiles:</string>
+							<string>mainMenuCommitAllFiles:</string>
+							<string>mainMenuCommitSelectedFiles:</string>
+							<string>mainMenuDeleteSelectedFiles:</string>
+							<string>mainMenuDiffAllFiles:</string>
+							<string>mainMenuDiffSelectedFiles:</string>
+							<string>mainMenuIgnoreSelectedFiles:</string>
+							<string>mainMenuRenameSelectedFile:</string>
+							<string>mainMenuRevertAllFiles:</string>
+							<string>mainMenuRevertSelectedFiles:</string>
+							<string>mainMenuRevertSelectedFilesToVersion:</string>
+							<string>mainMenuUnignoreSelectedFiles:</string>
+							<string>mainMenuUntrackSelectedFiles:</string>
+							<string>refreshBrowserContent:</string>
+							<string>toolbarAddRenameRemoveFiles:</string>
+							<string>toolbarCommitFiles:</string>
+							<string>toolbarDiffFiles:</string>
+							<string>toolbarRevertFiles:</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="outlets">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>nodeIconWell</string>
+							<string>nodeInspector</string>
+							<string>parentContoller</string>
+							<string>theBrowser</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>NSImageView</string>
+							<string>NSTextField</string>
+							<string>BrowserViewController</string>
+							<string>FSBrowser</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="889075582">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Classes/BrowserView/BrowserViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">BrowserViewController</string>
+					<string key="superclassName">NSViewController</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">theBrowserView</string>
+						<string key="NS.object.0">BrowserView</string>
+					</object>
+					<reference key="sourceIdentifier" ref="889075582"/>
+				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">DifferencesView</string>
 					<string key="superclassName">NSView</string>
@@ -3570,14 +3695,18 @@
 							<string>differencesMenuOpenSelectedFilesInFinder:</string>
 							<string>differencesMenuOpenTerminalHere:</string>
 							<string>differencesMenuRevealSelectedFilesInFinder:</string>
+							<string>mainMenuDiffAllFiles:</string>
 							<string>mainMenuDiffSelectedFiles:</string>
 							<string>openDifferencesView:</string>
 							<string>redisplayBrowser:</string>
 							<string>refreshDifferencesView:</string>
+							<string>toolbarDiffFiles:</string>
 							<string>validateButtons:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -3633,6 +3762,14 @@
 							<string>FSBrowser</string>
 						</object>
 					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="854523369">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Classes/DifferencesView/DifferencesViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">DifferencesView</string>
+					<string key="superclassName">NSView</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBUserSource</string>
 						<string key="minorKey"/>
@@ -3645,6 +3782,11 @@
 						<string key="NS.key.0">theDifferencesView</string>
 						<string key="NS.object.0">DifferencesView</string>
 					</object>
+					<reference key="sourceIdentifier" ref="854523369"/>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">DifferencesViewController</string>
+					<string key="superclassName">NSViewController</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBUserSource</string>
 						<string key="minorKey"/>
@@ -3676,7 +3818,177 @@
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">Classes/BrowserPane/FSBrowser.h</string>
+						<string key="minorKey">Classes/BrowserView/FSBrowser.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">HistoryView</string>
+					<string key="superclassName">NSView</string>
+					<object class="NSMutableDictionary" key="actions">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>historyMenuAddLabelToChosenRevision:</string>
+							<string>historyMenuDiffAllToChosenRevision:</string>
+							<string>historyMenuManifestOfChosenRevision:</string>
+							<string>historyMenuMergeRevision:</string>
+							<string>historyMenuRevertAllToChosenRevision:</string>
+							<string>historyMenuUpdateRepositoryToChosenRevision:</string>
+							<string>historyMenuViewRevisionDifferences:</string>
+							<string>labelsMenuMoveChosenLabel:</string>
+							<string>labelsMenuRemoveChosenLabel:</string>
+							<string>labelsMenuUpdateRepositoryToChosenRevision:</string>
+							<string>mainMenuCollapseChangesets:</string>
+							<string>mainMenuCommitAllFiles:</string>
+							<string>mainMenuDiffAllFiles:</string>
+							<string>mainMenuHistoryEditChangesets:</string>
+							<string>mainMenuRebaseChangesets:</string>
+							<string>mainMenuStripChangesets:</string>
+							<string>refreshHistoryView:</string>
+							<string>toolbarCommitFiles:</string>
+							<string>toolbarDiffFiles:</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="outlets">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>accordionView</string>
+							<string>detailedEntryTextView</string>
+							<string>detailsView</string>
+							<string>logTableView</string>
+							<string>parentController</string>
+							<string>removeLabelButton</string>
+							<string>theLabelsTableView_</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>JHAccordionView</string>
+							<string>NSTextView</string>
+							<string>NSView</string>
+							<string>LogTableView</string>
+							<string>HistoryViewController</string>
+							<string>NSButton</string>
+							<string>LabelsTableView</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="411909183">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Classes/HistoryView/HistoryViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">HistoryViewController</string>
+					<string key="superclassName">NSViewController</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">theHistoryView</string>
+						<string key="NS.object.0">HistoryView</string>
+					</object>
+					<reference key="sourceIdentifier" ref="411909183"/>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">JHAccordionSubView</string>
+					<string key="superclassName">NSView</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>buttonsContainerInDivider</string>
+							<string>divider</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>NSView</string>
+							<string>NSView</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="614638070">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Classes/HistoryView/JHAccordionView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">JHAccordionView</string>
+					<string key="superclassName">NSSplitView</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>pane1Box</string>
+							<string>pane2Box</string>
+							<string>pane3Box</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>JHAccordionSubView</string>
+							<string>JHAccordionSubView</string>
+							<string>JHAccordionSubView</string>
+						</object>
+					</object>
+					<reference key="sourceIdentifier" ref="614638070"/>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">LabelsTableView</string>
+					<string key="superclassName">NSTableView</string>
+					<object class="NSMutableDictionary" key="actions">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>labelTableDoubleClick:</string>
+							<string>labelTableSingleClick:</string>
+							<string>resetTable:</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="outlets">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>parentController</string>
+							<string>showBookmarks</string>
+							<string>showBranches</string>
+							<string>showOpenHeads</string>
+							<string>showTags</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
+							<string>NSButton</string>
+							<string>NSButton</string>
+							<string>NSButton</string>
+							<string>NSButton</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Classes/LabelsModel/LabelsTableView.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
